--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -15,8 +15,7 @@
         <label for="location-description">Description:</label>
         <textarea id="location-description" name="location_description" rows="4" cols="50">{{ current.description }}</textarea><br>
 
-        <h2>Destinations</h2>
-        <div id="destinations-container">
+        <div id="destinations-container" class="outer-border">
             <div>
                 {% set outerscope = namespace(has_other_location = false) %}
                 {% for location in game_data.locations %}
@@ -49,6 +48,38 @@
                     </div>
                 {% else %}
                     <p class="no-entities">(No other locations)</p>
+                {% endif %}
+            </div>
+        </div>
+
+        <div id="items-container" class="outer-border">
+            <table id="items-table" style="display: none;">
+                <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Quantity</th>
+                        <th class="transparent-col"></th>
+                    </tr>
+                </thead>
+                <tbody id="items-rows">
+                </tbody>
+            </table>
+            <div>
+                {% if game_data.items %}
+                    <!-- Select box for adding another source -->
+                    <div class="select-box">
+                        <select class="item-select" name="item_select">
+                            <option value="" selected>(Select item)</option>
+                            {% for item in game_data.items %}
+                                {% if item not in current.items %}
+                                    <option value="{{ item.id }}">{{ item.name }}</option>
+                                {% endif %}
+                            {% endfor %}
+                        </select>
+                        <button type="button" class="add-item-btn lesser-button">Add Item</button>
+                    </div>
+                {% else %}
+                    <p class="no-entities">(No other items)</p>
                 {% endif %}
             </div>
         </div>
@@ -109,6 +140,49 @@
             $('#destinations-container').on('click', '.remove-destination-btn', function() {
                 var destinationContainer = $(this).closest('.destination');
                 destinationContainer.remove();
+            });
+
+            function addItem(itemId, itemName, itemQty = 1) {
+                const itemHtml = `
+                    <tr>
+                        <td>${itemName}
+                            <input type="hidden" name="item_id[]" value="${itemId}">
+                        </td><td>
+                            <input type="number" name="item_qty[]" value="${itemQty}" size="8">
+                        </td><td>
+                            <button class="remove-item-btn lesser-button">Remove</button>
+                        </td>
+                    </tr>
+                `;
+                $('#items-rows').prepend(itemHtml);
+                $('#items-table').show();
+            }
+            $('.add-item-btn').click(function() {
+                const selectBox = $(this).prev('.item-select');
+                const selectedOption = selectBox.find(':selected');
+                const itemId = selectedOption.val();
+                const itemName = selectedOption.text();
+                if (itemId === '') {
+                    return; // don't add if the selected option is the placeholder
+                }
+                const existingItem = $('#items-rows input[name="item_id[]"][value="' + itemId + '"]').closest('tr');
+                if (existingItem.length > 0) {
+                    alert('Item already exists.');
+                    return;
+                }
+                addItem(itemId, itemName);
+            });
+            console.log("number of items={{ current.items | length }}");
+            {% for owned_item in current.items %}
+                console.log("name={{owned_item.item.name}}");
+                addItem(
+                    {{ owned_item.item.id }},
+                    "{{ owned_item.item.name }}",
+                    {{ owned_item.quantity | dec2str }});
+            {% endfor %}
+            $('#items-rows').on('click', '.remove-item-btn', function() {
+                const itemContainer = $(this).closest('tr');
+                itemContainer.remove();
             });
         });
     </script>
