--- a/app/templates/configure/location.html
+++ b/app/templates/configure/location.html
@@ -9,7 +9,7 @@
 {% block content %}
     <h1>Location Setup</h1>
     <form method="post">
-    <p class="info">Room, area, or container where items and characters can be. May be subdivided into a grid of positions.</p>
+    <p class="info">Room, area, or container where items and characters can be.</p><!-- TODO (maybe): May be subdivided into a grid of positions.-->
         <label for="location-name">Name:</label>
         <input type="text" id="location-name" name="location_name" value="{{ current.name }}" required><br>
         <label for="location-description">Description:</label>
