--- a/app/templates/play/location.html
+++ b/app/templates/play/location.html
@@ -33,21 +33,34 @@
     </ul>
     {% endif %}
 
-    {% set outerscope = namespace(display_section = false) %}
-    {% for item in game_data.items %}
-        {% if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == current.id %}
-            {% set outerscope.display_section = true %}
-        {% endif %}
-    {% endfor %}
-    {% if outerscope.display_section %}
-    <h2>Items</h2>
-    <ul>
-        {% for item in game_data.items if item.contained_by and item.contained_by.__class__.__name__ == 'Location' and item.contained_by.id == current.id %}
-            <li>
-                <a href="{{ url_for('play_item', item_id=item.id) }}">{{ item.name }}</a>
-            </li>
-        {% endfor %}
-    </ul>
+    {% if current.items %}
+        <h2>Items</h2>
+        <style>
+        .item-quantity {
+            display: inline-block;
+            width: 50px;
+            text-align: right;
+        }
+        </style>
+        <ul class="item-list">
+            {% for item_at in current.items %}
+                {% set item = item_at.item %}
+                <li>
+                    <span class="item-name">
+                        <a href="{{ url_for('play_item', item_id=item.id, loc_id=current.id) }}">
+                            {{ item.name }}
+                        </a>
+                    </span>
+                    <span class="item-quantity" id="item-{{ item.id }}-quantity">
+                        {% if item_at.quantity != -1 %}
+                            {{ item_at.quantity | dec2str }}
+                        {% endif %}
+                    </span>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No items at this location.</p>
     {% endif %}
 
     {% if current.destinations %}
@@ -55,10 +68,29 @@
     <ul>
         {% for destination, distance in current.destinations.items() %}
             <li>
-                <a href="{{ url_for('play_location', loc_id=destination.id) }}">{{ destination.name }}</a> -
-                Distance: {{ distance }}
+                <a href="{{ url_for('play_location', loc_id=destination.id) }}">{{ destination.name }}</a> —
+                Distance {{ distance | dec2str }}
             </li>
         {% endfor %}
     </ul>
     {% endif %}
+
+    <script>
+        $(document).ready(function() {
+            function updateQuantities() {
+                {% for item_at in current.items %}
+                    // Make AJAX request for item quantity
+                    $.get('/item/progress_data/{{ item_at.item.id }}', function(data) {
+                        $('#item-{{ item_at.item.id }}-quantity').text(data.quantity);
+                    });
+                {% endfor %}
+            }
+
+            // Update quantities initially
+            //updateQuantities();
+
+            // Update quantities periodically
+            //setInterval(updateQuantities, 10000);
+        });
+    </script>
 {% endblock %}
